# kaggle-shopping-behaviour

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: notebook copy.ipynb  notebook.ipynb
src/: dataset.py
src/shopping_behaviour/: data.py
